# omni

./: .coverage  .coveragerc  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  claude.md  coverage.json  pyproject.toml
.cursor/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_ability.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.impeccable/critique/: 2026-07-09T04-19-51Z__apps-ui.md
.impeccable/live/: config.json
apps/ui/: README.md  captions.html  index.html  meeting-toast.html  package.json  pill.html  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/capabilities/: captions-overlay.json  default.json  dictation-pill.json  meeting-toast.json  onboarding.json
apps/ui/src-tauri/src/: captions_overlay_window.rs  dictation_clipboard_win32.rs  dictation_hotkey_accelerator.rs  dictation_injection_win32.rs  dictation_pill_window.rs  dictation_text_injection.rs  engine_sidecar.rs  engine_sidecar_job_object_win32.rs  lib.rs  main.rs  meeting_toast_window.rs  tray.rs  updater_launch_check.rs
apps/ui/src-tauri/tests/: live_notepad_injection_roundtrip.rs
docs/: README.md  ability-ideas.md  architecture.md  features.md  threat-model.md
docs/design/: design-brief.md  design-components.md  naomi-visual-brief.md  redesign-brief-v2.md  research-2026-07-08-competitive-teardown.md
docs/plans/: 2026-07-07-omni-plus-roadmap-design.md  2026-07-08-talkis-integration-plan.md  2026-07-08-ui-rehaul-design-plan.md  2026-07-10-meetily-full-model-stack.md  2026-07-10-meetily-ux-pack.md
docs/progress/: 2026-07-08-ui-rehaul.md  _ruff_live.txt  coverage-hardening.md  e2e-and-media-lane.md  evidence-showcase.md  gate-mypy-errors.txt  gate-ruff-errors.txt  gate-tsc-errors.txt  grok-brief-engine-fixes.md  grok-brief-engine-lint-types.md  grok-brief-ui-rust-fixes.md  grok-brief-ui-tsc.md  meetily-full-model-stack.md  meetily-ux-pack.md  naomi-loop.md  omni-build.md  overnight-blocker-fix-run.md  pending-deps.txt  sweep-engine.md  sweep-rust-packaging.md  sweep-ui.md  ui-ux-rehaul.md
docs/research/: README.md  m3-retrieval-architecture-recommendation.md
engine/: __init__.py  approval_card_build_server_wiring.py  approval_cards_gateway.py  approval_command_dispatcher.py  capture_command_dispatcher.py  cli_app.py  dictation_command_dispatcher.py  live_answers_spotter_wiring.py  runtime_settings.py  server.py  server_default_service_factories.py  websocket_connection_handler.py
engine/agents/: __init__.py  agents_errors.py  approval_card_builder.py  approval_card_types.py  approval_cards_repository.py  approval_protocol_names.py  calendar_create_event_tool.py  calendar_find_free_slot_tool.py  card_executor.py  card_to_tool_params_mapper.py  contacts_upsert_tool.py  default_tool_registry.py  dictation_intent_card_builder.py  executed_action_vault_trace.py  gmail_create_draft_tool.py  llm_function_call_mapper.py  meeting_actions_region_appender.py  tool_registry.py  vault_write_note_tool.py
engine/ask/: __init__.py  ask_answer_contracts.py  ask_deleted_meeting_filter.py  ask_omni_answer_service.py  ask_prompt_frames.py  ask_query_command_dispatcher.py  ask_service_protocols.py  citation_marker_mapping.py  live_answers_spotter.py  live_summary_service.py  live_translation_service.py  proactive_vault_poller.py  structured_first_retrieval.py
engine/audio/: __init__.py  audio_device_listing.py  audio_frame_types.py  capture_backend_factory.py  (+11 more)
evidence/: .gitignore  README.md  coverage-report.md  requirements-analysis.txt  ruff.toml
media/: README.md
migrations/: 0001_initial.sql  0003_router_ledger.sql  0004_index_layer.sql  0005_extraction_results.sql  0006_meeting_finalization_columns.sql  0007_dictation_intents.sql  0008_approval_cards.sql  0009_app_settings.sql  0010_transcript_speaker_id.sql  0011_dictation_history.sql  0012_meetings_deleted_at.sql
packaging/: README.md  generate_omni_icon.py  install-stt-runtime.ps1  install-stt-runtime.sh  model-manifest.json  omni-engine-version-info.txt  omni-engine.spec  pyi_rth_omni_stt_pyenv.py  stt-runtime-requirements.txt
site/: README.md  index.html
tests/: __init__.py  agents_test_support.py  approval_card_ws_test_support.py  conftest.py  dictation_finalization_test_support.py  enhance_test_support.py  test_agents__approval_cards_schema_transition_matrix.py  test_agents__card_builder_malformed_rows.py  test_agents__contacts_and_calendar_tool_edges.py  test_agents__executor_audit_and_vault_trace.py  test_agents__free_slot_and_param_mapper_edges.py  test_agents__kill_switch_blocks_google_calls.py  test_agents__mapper_and_card_builder_edges.py  test_agents__toctou_double_approve_race.py  test_agents__tool_registry_draft_only_and_dry_run.py  test_ask__citation_marker_mapping_exactness.py  test_ask__empty_and_weak_retrieval_honesty.py  test_ask__filters_deleted_meeting_transcripts.py  test_ask__latency_and_payload_exactness.py  test_ask__live_summary_service.py  test_ask__live_tier_never_reranks_or_synthesizes.py  test_ask__live_translation_hot_reload_and_errors.py  test_ask__meeting_scoped_query.py  test_ask__query_dispatcher_and_answer_service_edges.py  test_ask__question_spotter_cadence_dedupe_and_malformed.py  test_ask__spotter_server_wiring.py  test_ask__structured_path_passthrough.py  test_audio__capture_backend_and_device_listing_fake.py  test_audio__device_change_recovery.py  test_audio__echo_cancellation.py  test_audio__resampler_correctness.py  test_audio__ring_buffer_bounded_drop_oldest.py  test_audio__wav_to_mp3_encoder.py  test_detect__desktop_snapshot_and_mic_detector_edges.py  test_detect__microphone_consent_store_fail_closed.py  test_detect__process_and_window_pattern_table.py  test_detect__rearm_ui_transition_and_auto_start_guard.py  test_detect__rules_engine_decision_table.py  test_detect__service_lifecycle.py  test_detect__vad_trigger_hysteresis_boundaries.py  (+167 more)
(+626 files in other folders)
