[project]
name = "omni-engine"
version = "0.1.0"
description = "Omni engine sidecar: local-first meeting-intelligence engine (FastAPI + WebSocket protocol v1, SQLite storage)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "aiosqlite>=0.20",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

# ---------------------------------------------------------------------------
# Ruff — lint + import order. Security rules (S) stay ON for engine code;
# tests are allowed asserts and hardcoded tmp paths (S101/S108).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", "apps"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]

# ---------------------------------------------------------------------------
# Mypy — strict on engine code; tests get minor relaxations for fixtures.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
files = ["engine", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# Pytest — asyncio auto mode so async tests need no per-test marker.
# No network in unit tests; all filesystem writes go to tmp_path fixtures.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
