[project]
name = "omni-engine"
version = "0.1.0"
description = "Omni engine sidecar: local-first meeting-intelligence engine (FastAPI + WebSocket protocol v1, SQLite storage)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "aiosqlite>=0.20",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    # M1 audio/STT light runtime deps (heavy model stack lives in the `stt` extra).
    "numpy>=1.26",
    "soxr>=0.5",
    "onnxruntime>=1.18",
    "pyaudiowpatch>=0.2.12; sys_platform == 'win32'",
    "sounddevice>=0.5; sys_platform != 'win32'",
    "groq>=1.5.0",
    "google-genai>=2.10.0",
    "anthropic>=0.116.0",
    "openai>=1.60.0",
    "fpdf2>=2.8",
    "python-docx>=1.1.0",
    "sqlite-vec>=0.1.9",
    "tokenizers>=0.22.2",
    "watchdog>=6.0.0",
]

[project.scripts]
omni-cli = "engine.cli_app:main"

# Heavy STT model stack — multi-GB (torch CUDA + NeMo). Optional extra so CI
# and non-STT dev syncs stay lean; the engine imports it lazily and reports
# stt_ready=false honestly when absent (fail closed, never crash).
[project.optional-dependencies]
stt = [
    "nemo-toolkit[asr]>=2.3",
    "torch>=2.6",
]
whisper = [
    "faster-whisper>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx2>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# uv — torch comes from the PyTorch CUDA 12.8 index on Windows (RTX 4070 box);
# `explicit = true` keeps this index from shadowing PyPI for anything else.
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32'" }]

[tool.hatch.build.targets.wheel]
packages = ["engine"]

# ---------------------------------------------------------------------------
# Ruff — lint + import order. Security rules (S) stay ON for engine code;
# tests are allowed asserts and hardcoded tmp paths (S101/S108).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", "apps"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
# S311: tests use SEEDED pseudo-random generators for property-style cases —
# deliberate determinism, nothing cryptographic.
"tests/**" = ["S101", "S108", "S311"]

# ---------------------------------------------------------------------------
# Mypy — strict on engine code; tests get minor relaxations for fixtures.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
files = ["engine", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# Untyped third-party audio/ML libs (all imported lazily so the engine loads
# without the heavy `stt` extra installed — e.g. on Linux CI).
[[tool.mypy.overrides]]
module = [
    "soxr",
    "pyaudiowpatch",
    "onnxruntime",
    "nemo.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest — asyncio auto mode so async tests need no per-test marker.
# No network in unit tests; all filesystem writes go to tmp_path fixtures.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# live_stt (real models + real audio devices) is opt-in: deselected by default
# so unit runs and CI stay hermetic (no network, no GPU, no audio hardware).
addopts = "-q -m 'not live_stt'"
markers = [
    "live_stt: real-model / real-audio integration tests (run explicitly with -m live_stt)",
]
