# Omni desktop shell (Tauri 2). Hosts the window/tray, supervises the Python
# engine sidecar, and nothing else — all intelligence lives in the engine.
[package]
name = "omni-ui"
version = "0.1.0"
description = "Omni desktop shell: window, tray, and engine sidecar supervisor"
edition = "2021"

[lib]
name = "omni_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
# M7 onboarding: native folder picker for the vault step (open() only).
tauri-plugin-dialog = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# M7 auto-update: registered in lib.rs (plugin + updater_download_and_install /
# updater_restart_app). Endpoint + minisign pubkey live in tauri.conf.json.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# M5 dictation text injection (clipboard-swap + SendInput Ctrl+V) and the
# keydown foreground-window capture. Raw Win32 bindings, Windows-only.
# JobObjects: engine sidecar KILL_ON_JOB_CLOSE so force-kill of the shell
# also kills the engine (no orphaned port 8765 / mic).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# The live Notepad injection round-trip (ignored by default) drives Ctrl+A/C
# read-back with the same bindings.
[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
